--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ datetime
 dj-database-url==0.4.1
 Flask
 #Django==3.1.2
-gunicorn==19.6.0
+#gunicorn==19.6.0
 psycopg2==2.8.1
 whitenoise==3.3.0
 requests==2.9.1
